log.txt
PS F:\codic learning\cs50 web\cs50ai\tictactoe> python runner.py
C:\Users\Tahfim\AppData\Local\Programs\Python\Python313\Lib\site-packages\pygame\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  from pkg_resources import resource_stream, resource_exists
pygame 2.6.1 (SDL 2.28.4, Python 3.13.3)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "F:\codic learning\cs50 web\cs50ai\tictactoe\runner.py", line 5, in <module>
    import tictactoe as ttt
  File "F:\codic learning\cs50 web\cs50ai\tictactoe\tictactoe.py", line 71
    if (board[0][0] == board[0][1] == board[0][2] == "X") or
                                                            ^
SyntaxError: invalid syntax
PS F:\codic learning\cs50 web\cs50ai\tictactoe> 
